# CppSchmankerl

./: .gitmodules  CMakeLists.txt
Fibonacci/: FibCompTime.hpp  FibCompTimeConstexpr.hpp  ReadMe.md  compiletime.cpp  compiletime_rtAvailable.cpp  runtime.hpp  runtime_loop.cpp  runtime_recursive.cpp
Fibonacci/benchmark/: CMakeLists.txt  fibCompTimeBM.cpp
